testdata/baselines/reference/submodule/compiler/pushTypeGetTypeOfAlias.errors.txt
bar.js(2,9): error TS2339: Property 'blah' does not exist on type 'typeof import("bar")'.
bar.js(2,24): error TS2339: Property 'someProp' does not exist on type 'typeof import("bar")'.


==== bar.js (2 errors) ====
    module.exports = function () {};
    exports.blah = exports.someProp;
            ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("bar")'.
                           ~~~~~~~~
!!! error TS2339: Property 'someProp' does not exist on type 'typeof import("bar")'.